src/test/ui/mismatched_types/E0053.stderr
error[E0053]: method `foo` has an incompatible type for trait
  --> $DIR/E0053.rs:9:15
   |
LL |     fn foo(x: u16);
   |               --- type in trait
...
LL |     fn foo(x: i16) { }
   |               ^^^ expected u16, found i16
   |
   = note: expected type `fn(u16)`
              found type `fn(i16)`

error[E0053]: method `bar` has an incompatible type for trait
  --> $DIR/E0053.rs:11:12
   |
LL |     fn bar(&self);
   |            ----- type in trait
...
LL |     fn bar(&mut self) { }
   |            ^^^^^^^^^ types differ in mutability
   |
   = note: expected type `fn(&Bar)`
              found type `fn(&mut Bar)`
help: consider change the type to match the mutability in trait
   |
LL |     fn bar(&self) { }
   |            ^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0053`.
